--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,7 +9,7 @@ html {
 }
 
 
-.title {
+#title {
     background: rgb(59, 68, 77);
     color: whitesmoke;
     text-align: center;
@@ -36,6 +36,24 @@ label {
   font-weight: 400;
 }
 
+input,
+textarea {
+  display: block;
+  width: 100%;
+  margin: 5px, 0;
+  padding: 8px;
+  font-size: 18px;
+  color: #333;
+  font-family:'Quicksand', sans-serif;
+}
+
   ::placeholder {
     color: lightslategray
+  }
+
+
+
+  @media screen and (min-width: 768px) {
+      /* ...desktop styles here... */
+
   }
