--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,6 @@ html {
   font-size: 18px;
 }
 
-
 #title {
     background: rgb(59, 68, 77);
     color: whitesmoke;
@@ -16,17 +15,25 @@ html {
     padding: 25px;
 }
 
-.topic {
-  /* border-bottom: 4px double rgb(59, 68, 77); */
+#topic {
   border-bottom-style: double;
   border-bottom-color: rgb(59, 68, 77);
   border-bottom-width: 8px;
+  text-align: center;
+}
+
+div > h3{
+  text-align: center;
+}
+
+fieldset {
+  border:none;
 }
 
 legend {
   font-weight: 700;
   font-size: 19px;
-  margin-bottom: 5px;
+  padding-top: 5px;;
 }
 
 label {
