--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -30,10 +30,15 @@ fieldset {
   border:none;
 }
 
-legend {
+#firstset {
+  border-bottom: 2px solid rgb(59, 68, 77);
+  /* padding-bottom: 5px; */
+}
+
+.legend {
   font-weight: 700;
   font-size: 19px;
-  padding-top: 5px;;
+  padding-top: 25px;
 }
 
 label {
@@ -46,11 +51,13 @@ label {
 input,
 textarea {
   display: block;
+  border: none;
   width: 100%;
   margin: 5px, 0;
   padding: 8px;
   font-size: 18px;
   color: #333;
+  background: rgb(233, 231, 231);
   font-family:'Quicksand', sans-serif;
 }
 
@@ -58,7 +65,28 @@ textarea {
     color: lightslategray
   }
 
+  input:focus,
+  textarea:focus {
+    outline: 3px solid rgb(86, 21, 98)
+  }
 
+  textarea {
+    height: 100%;
+  }
+
+  button {
+    width: 100%;
+    max-width: 430px;
+    padding: 12px 0;
+    font-size: 18px;
+    font-weight: 700;
+    border: none;
+    border-radius: 8px;
+    background: turquoise;
+    color: white;
+    display: block;
+    cursor: pointer;
+  }
 
   @media screen and (min-width: 768px) {
       /* ...desktop styles here... */
