--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -64,7 +64,11 @@ select {
 
 
   ::placeholder {
-    color: lightslategray
+    color: lightslategray;
+    text-align: right;
+    font-size: 14px;
+    font-style: italic;
+    padding: 2px;
   }
 
   input:focus,
