--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -114,11 +114,11 @@ select {
     margin-left: 12px;
   }
 
-  .flex {
+  /* .flex {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+  } */
 
   #copywright {
     font-size: 14px;
@@ -126,6 +126,19 @@ select {
   }
 
   @media screen and (min-width: 768px) {
-    
+    button {
+      width: 90%;
+      align-self: center;
+      max-width: 100%;
+    }
+/* 
+    .body {
+      display: flex;
+      flex-direction: column;
+      width: 30%;
+      justify-content: center;
+      align-items: center;
+      margin:auto;
+    } */
 
   }
