--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,11 +9,11 @@ html {
 }
 
 #title {
+    display: flex;
+    justify-content: center;
     background: rgb(59, 68, 77);
     color: whitesmoke;
-    text-align: center;
-    padding: 25px;
-    width:100%;
+    /* padding: 25px; */
 }
 
 #topic {
