--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,7 +8,7 @@ html {
   font-size: 18px;
 }
 
-h1 {
+div > h1 {
     width: 100%;
     display: block; 
     text-align: center;
@@ -137,10 +137,12 @@ select {
       margin: 10px auto;
     }
 
-
-    /* #title {
-      display: flex;
+    #title {
+      display: inline-flex;
       flex-direction: row;
+      max-width: 1100px;
+      justify-content: center;
       width: 100%;
-    } */
+    }
+
  }
