--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -138,7 +138,8 @@ select {
     }
 
     #title {
-      display: inline-flex;
+      display: inline-block;
+      margin: 0;
       flex-direction: row;
       max-width: 1100px;
       justify-content: center;
