--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,6 +41,9 @@ fieldset {
 
 #contact {
   border-bottom: 2px solid rgb(59, 68, 77);
+  /* background: rgb(75, 176, 168); */
+  background: rgb(235, 179, 237);
+  padding: 12px;
 }
 
 .legend {
@@ -73,7 +76,6 @@ select {
 
   ::placeholder {
     color: lightslategray;
-    /* text-align: right; */
     font-size: 14px;
     font-style: italic;
     padding: 2px;
@@ -134,14 +136,6 @@ select {
     #wrapper {
       max-width: 400px;
       margin: 10px auto;
-    }
-
-    #title {
-      display: inline-block;
-      margin: 0;
-      flex-direction: row;
-      justify-content: center;
-      width: 100%;
     }
 
  }
