--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -42,7 +42,7 @@ fieldset {
 #contact {
   border-bottom: 2px solid rgb(59, 68, 77);
   background: rgb(235, 179, 237);
-  padding: 12px;
+  padding: 20px;
 }
 
 #contact:hover,
@@ -89,6 +89,10 @@ select {
     font-size: 14px;
     font-style: italic;
     padding: 2px;
+  }
+
+  span.req {
+    color: red;
   }
 
   input:focus,
@@ -163,6 +167,7 @@ fieldset#contact {
 
 #contact label {
   flex-basis: 25%;
+  margin-top: 8px;
   
 }
 
@@ -172,19 +177,11 @@ fieldset#contact {
   flex-grow: 1;
 }
 
-/* div p {
-  text-align: left;
-} */
 
 #zipcode {
-  flex-basis: 50%;
+  max-width: 36%;
+  margin-right: 39%;
 }
-
-/* .hint {
-  font-weight: 300;
-  font-size: 16px;
-  text-align: end;
-} */
 
 
  }
